# www-online-shop

./: .env.example  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
app/api/routes/: carts.py  categories.py  products.py
app/core/: security.py
app/crud/: base.py  category.py  product.py  promo.py
app/db/: session.py
app/models/: cart.py  category.py  product.py  review.py
app/schemas/: cart.py  product.py  promo.py  review.py
backend/: .env.example  Dockerfile  docker-compose.yml
backend/alembic/: env.py
backend/alembic/versions/: aef055e944f6_initial_migration.py
backend/app/: .env copy  main.py
backend/app/core/: config.py  dependencies.py
backend/app/crud/: cart.py  (+2 more)
backend/data/: test_data.sql
backend/tests/: test_auth.py  test_product.py
data/: test_data.sql
frontend/: Dockerfile  README.md  kubb.config.ts  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  queryClient.ts
mobile-app/: .dockerignore  Dockerfile  README.md  capacitor.config.ts  docker-compose.yml  nginx.conf  package-lock.json  package.json
mobile-app/src/: App-minimal.tsx  App-test.tsx  App.tsx
project_pitonyashki_html_css/: UI_Kit.html  cart.html  checkout.html  index.html  product.html  product_card.html
project_pitonyashki_html_css/css/: cart.css  checkout.css  main.css  product.css  product_card.css  second.css  stylesheet.css
project_pitonyashki_html_css/scss/: cart.scss  checkout.scss  main.scss  product.scss  product_card.scss
tests/: conftest.py  test_cart.py
(+280 files in other folders)
