[tool.poetry]
name = "www-online-shop"
version = "0.1.0"
description = ""
authors = [
    "Aleksei Ermakov <epmak@pm.me>",
    "Anton Shmelev",
    "Valeriya Zima",
    "David Lisunenko"
]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
sqlalchemy = ">=2.0.40,<3.0.0"
passlib = ">=1.7.4,<2.0.0"
alembic = ">=1.15.2,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
uvicorn = ">=0.34.0,<0.35.0"
pydantic-settings = ">=2.8.1,<3.0.0"
python-jose = { extras = ["cryptography"], version = ">=3.4.0,<4.0.0" }
pydantic = { extras = ["email"], version = ">=2.11.3,<3.0.0" }
python-multipart = ">=0.0.20,<0.0.21"
bcrypt = ">=4.3.0,<5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
pytest-cov = ">=6.1.1,<7.0.0"
httpx = ">=0.28.1,<0.29.0"
black = ">=25.1.0,<26.0.0"
isort = ">=6.0.1,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
